# viz_guide

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
app/: __init__.py  agent.py  agent_tools.py  core_rules.py  data_utils.py  feedback.py  generator.py  guide_chunks.py  guide_index.py  main.py  mcp_tools.py  random_prompts.py  refine.py  session.py  suggest.py  template_feedback.py
app/templates/: __init__.py  bar.py  base.py  detector.py  line.py
audit/: inventory.md
guide/: 00_index.md  01_data_analysis.md  02_intent.md  03_chart_selection.md  04_encoding.md  05_axes.md  06_color.md  07_text.md  08_layout.md  09_legends.md  10_hover.md  11_interactions.md  12_annotations.md  13_accessibility.md  14_performance.md
