[project]
name = "viz-guide"
version = "0.1.0"
description = "AI-powered tool for testing and improving a Plotly visualization style guide"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.28.0",
    "plotly>=5.18.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "claude-agent-sdk>=0.1.19",
    "python-dotenv>=1.0.0",
    "kaleido>=1.0.0",
    "pillow>=10.0.0",
]

[tool.uv]
dev-dependencies = []
